{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 21,
  "lineage": "0cd3e835-632a-f93c-e204-1e0eedc877e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043a385c376281a7e",
            "association_id": "eipassoc-0c599984851fe1d10",
            "domain": "vpc",
            "id": "eipalloc-043a385c376281a7e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-02ad8c1bddc44bbb4",
            "private_dns": "ip-10-0-0-240.us-west-2.compute.internal",
            "private_ip": "10.0.0.240",
            "public_dns": "ec2-35-161-170-109.us-west-2.compute.amazonaws.com",
            "public_ip": "35.161.170.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proja",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d70546e43a941d70",
            "arn": "arn:aws:ec2:us-west-2:855514650145:instance/i-0a2531fcba5257414",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2531fcba5257414",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "salman",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d5a20f11b4b24ea3",
            "private_dns": "ip-10-0-0-184.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ce0ce43334964f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0747937db2079ff78",
            "tags": {
              "env": "dev",
              "name": "dev01",
              "os": "ubuntu"
            },
            "tags_all": {
              "env": "dev",
              "name": "dev01",
              "os": "ubuntu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016da80b8df6e74c8"
            ]
          },
          "dependencies": [
            "aws_security_group.salmansg",
            "aws_subnet.salmanpub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "salmanigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:855514650145:internet-gateway/igw-083f15d600ebbc912",
            "id": "igw-083f15d600ebbc912",
            "owner_id": "855514650145",
            "vpc_id": "vpc-061e9fc6b4d25094f"
          },
          "dependencies": [
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "salmanngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043a385c376281a7e",
            "connectivity_type": "public",
            "id": "nat-0a643c871f3b0056d",
            "network_interface_id": "eni-02ad8c1bddc44bbb4",
            "private_ip": "10.0.0.240",
            "public_ip": "35.161.170.109",
            "subnet_id": "subnet-05f54a67d978fd2c4"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_subnet.salmanpvt",
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:855514650145:route-table/rtb-08ff0070f212e4584",
            "id": "rtb-08ff0070f212e4584",
            "owner_id": "855514650145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083f15d600ebbc912",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e9fc6b4d25094f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.salmanigw",
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvtrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:855514650145:route-table/rtb-0abda1cd0451d8e35",
            "id": "rtb-0abda1cd0451d8e35",
            "owner_id": "855514650145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a643c871f3b0056d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e9fc6b4d25094f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.salmanngw",
            "aws_subnet.salmanpvt",
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrtassc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0760c69eb971c1b15",
            "route_table_id": "rtb-08ff0070f212e4584",
            "subnet_id": "subnet-0747937db2079ff78"
          },
          "dependencies": [
            "aws_internet_gateway.salmanigw",
            "aws_route_table.pubrt",
            "aws_subnet.salmanpub",
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtrtassc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e005a5df9f32cf4",
            "route_table_id": "rtb-0abda1cd0451d8e35",
            "subnet_id": "subnet-05f54a67d978fd2c4"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.salmanngw",
            "aws_route_table.pvtrt",
            "aws_subnet.salmanpvt",
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "salmansg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:855514650145:security-group/sg-016da80b8df6e74c8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016da80b8df6e74c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "salmansg",
            "name_prefix": "",
            "owner_id": "855514650145",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-061e9fc6b4d25094f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "salmanpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:855514650145:subnet/subnet-0747937db2079ff78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0747937db2079ff78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855514650145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-061e9fc6b4d25094f"
          },
          "dependencies": [
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "salmanpvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:855514650145:subnet/subnet-05f54a67d978fd2c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f54a67d978fd2c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "855514650145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-061e9fc6b4d25094f"
          },
          "dependencies": [
            "aws_vpc.salmanvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "salmanvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:855514650145:vpc/vpc-061e9fc6b4d25094f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0594c898af3fb64fc",
            "default_route_table_id": "rtb-06ebfe207313ec060",
            "default_security_group_id": "sg-078bb9184a733a2c4",
            "dhcp_options_id": "dopt-02d8eb7c90b1670f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-061e9fc6b4d25094f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ebfe207313ec060",
            "owner_id": "855514650145"
          }
        }
      ]
    }
  ]
}